--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "appwrite": "^17.0.0",
     "html-react-parser": "^5.2.2",
     "lexical": "^0.27.2",
+    "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "recharts": "^2.15.2",
     "swiper": "^11.2.5"
   },
   "devDependencies": {
