--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ VITE_APPWRITE_DATABASE_ID="67c42d8500204a1ee3d2"
 VITE_APPWRITE_COLLECTION_ID="67c5c628003e596cb7dc"
 VITE_APPWRITE_BUCKET_ID="682b2ce500322af7dbc4"
 VITE_APPWRITE_USER_COLLECTION_ID="67d6f3310020df0341e9"
+VITE_APPWRITE_ORDER_COLLECTION_ID="68302169001af7d0a617"
 
