--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ VITE_APPWRITE_COLLECTION_ID="67c5c628003e596cb7dc"
 VITE_APPWRITE_BUCKET_ID="682b2ce500322af7dbc4"
 VITE_APPWRITE_USER_COLLECTION_ID="67d6f3310020df0341e9"
 VITE_APPWRITE_ORDER_COLLECTION_ID="68302169001af7d0a617"
+VITE_APPWRITE_MESSAGES_COLLECTION_ID="6887c7b400009c548e50"
 
