--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.12",
     "appwrite": "^17.0.0",
+    "date-fns": "^4.1.0",
     "html-react-parser": "^5.2.2",
     "lexical": "^0.27.2",
     "lucide-react": "^0.487.0",
